--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "eslint-plugin-simple-import-sort": "^7.0.0"
   },
   "engines": {
-    "node": "^14.0.0",
-    "npm": "6.4.x"
+    "node": ">=14.0.0 <18.0.0",
+    "npm": "^6.4.0"
   }
 }
