--- a/api/package.json
+++ b/api/package.json
@@ -31,7 +31,7 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
-    "express": "~4.16.0",
+    "express": "^4.18.2",
     "express-async-handler": "^1.1.4",
     "express-http-context": "^1.2.3",
     "express-session": "^1.17.0",
