--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.2.2",
   "private": true,
   "scripts": {
-    "postinstall": "run-p install:api install:web install:native",
+    "poooostinstall": "run-p install:api install:web install:native",
     "install:api": "cd api && npm install",
     "install:web": "cd web && npm install",
     "install:native": "cd native && npm install",
@@ -34,7 +34,7 @@
   "dependencies": {
     "@types/jest": "^27.4.1",
     "@types/spotify-api": "0.0.2",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "npm-run-all": "^4.0.2",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
